--- a/shell/package.json
+++ b/shell/package.json
@@ -15,6 +15,7 @@
 	"dependencies": {
 		"express": "^4.17.1",
 		"node-fetch": "2.6.7",
+		"cors": "2.8.5",
 		"react": "^18.1.0",
 		"react-dom": "^18.1.0",
 		"react-helmet": "^6.0.0",
